# pydantic

./: .codecov.yml  .codespellrc  .coveragerc  .deepsource.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .hooky.toml  .markdownlint.yaml  .mypy-stubtest-allowlist  .pre-commit-config.yaml  .pyup.yml  .rustfmt.toml  .travis.yml  .yamlfmt.yaml  404.html  AGENTS.md  CHANGES.md  CITATION.cff  Cargo.toml  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTES.md  PR_READY.md  README.md  README.rst  TODO.md  _redirects  a.py  azure-pipelines.yml  benchmark_str.py  blog.md  build-docs.sh  build.rs  caller.py  (+38 more)
.cargo/: config.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  check_pydantic_core_version.py  check_version.py  dependabot.yml  labeler.yml  release.yml  set_version.py  zizmor.yml
.hyperlint/: .vale.ini  style_guide_test.md
.mypy-configs/: fast.toml  full.toml
1.10/: 404.html  index.html  sitemap.xml
2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1/: index.html  sitemap.xml
2.10/: 404.html  index.html  objects.inv  sitemap.xml
2.11/: 404.html  algolia_records.json  index.html  llms-full.txt  llms.txt  sitemap.xml
2.12/: 404.html  algolia_records.json  index.html  llms-full.txt  llms.txt  sitemap.xml
2.13/: algolia_records.json  index.html  llms-full.txt  llms.txt  sitemap.xml
2.2/: index.html  sitemap.xml
2.3/: 404.html  index.html
2.4/: 404.html  index.html  objects.inv  sitemap.xml
2.5/: 404.html  index.html  objects.inv  sitemap.xml
2.6/: index.html  objects.inv  sitemap.xml
2.7/: 404.html  index.html  objects.inv  sitemap.xml
2.8/: index.html  objects.inv  sitemap.xml
2.9/: 404.html  index.html  objects.inv  sitemap.xml
benches/: main.rs
benchmarks/: check_str.py  get_profiler.py  minimal.py  plain.py  profile.py  profile_lines.py  requirements.txt  run.py  serialize.py  test_apischema.py  test_attr.py  test_cattr.py  test_cattrs.py  test_cerberus.py  test_colander.py  test_dataclassesjson.py  test_drf.py  test_dt.py  test_jsons.py  test_marshmallow.py  test_pydantic.py  test_related.py  test_runtype.py  test_schematics.py  test_serpyco.py  test_toasted_marshmallow.py  test_trafaret.py  test_validate_it.py  test_valideer.py  test_validx.py  test_voluptuous.py
changes/: 1011-acnebs.md  1015-samuelcolvin.md  1017-MrMrRobat.md  1022-samuelcolvin.md  1025-sullivancolin.md  1026-dmontagu.md  1031-tiangolo.md  1034-MrMrRobat.md  1049-aviramha.md  1054-selimb.md  1057-dmontagu.md  1061-skewty.md  1064-samuelcolvin.md  1067-kierandarcy.md  1072-samuelcolvin.md  1073-volker48.md  1074-samuelcolvin.md  1075-tiangolo.md  1077-samuelcolvin.md  1079-sbv-trueenergy.md  1088-lutostag.md  1090-samuelcolvin.md  1091-samuelcolvin.md  1102-samuelcolvin.md  1104-dmontagu.md  1105-tribals.md  1115-samuelcolvin.md  1119-frankie567.md  1125-therefromhere.md  1126-koxudaxi.md  1127-samuelcolvin.md  1138-samuelcolvin.md  1142-samuelcolvin.md  1152-tiangolo.md  1159-tiangolo.md  1166-cuencandres.rst  1172-samuelcolvin.md  1173-calvinwyoung.md  1177-samuelcolvin.md  1178-samuelcolvin.md  (+638 more)
dev/: 404.html  algolia_records.json  index.html  llms-full.txt  llms.txt  objects.inv  pydantic-2.12.0b1+dev-py3-none-any.whl  pydantic-2.13.0a0+dev-py3-none-any.whl  pydantic-2.14.0a0+dev-py3-none-any.whl  sitemap.xml
dev-v1/: 404.html  index.html  sitemap.xml
dev-v2/: 404.html  index.html  objects.inv  sitemap.xml
docs/: .benchmarks_table.md  .meta.yml  Makefile  annotations_resolving.md  architecture.md  benchmarks.csv  benchmarks.md  benchmarks_attrs.csv  changelog.md  conf.py  contributing.md  datamodel_code_generator.md  example1.py  example2.py  example2.txt  features.md  help_with_pydantic.md  hypothesis_plugin.md  index.md  index.rst  install.md  migration-guide-notes.md  migration.md  mypy_plugin.md  pre_build.py  pycharm_plugin.md  pydantic_people.md  redirects.js  requirements.txt  schema_mapping.py  spelling_wordlist.txt  usage.md  usage_choices.py  usage_compound.py  usage_config.py  usage_exotic.py  usage_settings.py  using_pydantic.md  version-compatibility.md  version-policy.md  (+3 more)
investigations/: issue_11773_investigation.py
profiling/: dict_model.py
pydantic/: __init__.py  _hypothesis_plugin.py  _migration.py  alias_generators.py  aliases.py  analyzed_type.py  annotated.py  annotated_arguments.py  annotated_handlers.py  annotated_types.py  annotations.py  base_model.py  class_validators.py  color.py  colors.py  config.py  constraints.py  core_utils.py  dataclasses.py  datetime_parse.py  decorator.py  decorators.py  descriptors.py  env_settings.py  error_wrappers.py  errors.py  exceptions.py  experimental.py  fields.py  fragments.py  functional_serializers.py  functional_validators.py  generics.py  generics_utils.py  import_helper.py  json.py  json_schema.py  json_schema_misc.py  main.py  main2.py  (+35 more)
pydantic-core/: .clippy.toml  .codecov.yml  .mypy-stubtest-allowlist  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.rs  package.json  pyproject.toml
pydantic-next/: .gitignore  README.md  pyproject.toml
pydantic_core/: __init__.py  _pydantic_core.pyi  _types.py  core_schema.py  schema_types.py
pydantic_next/: pydantic_next  pyproject.toml
release/: README.md  check_relnotes.py  make_history.py  prepare.py  push.py  shared.py
requirements/: README.md  all.in  all.txt  docs-constrained.in  docs.in  docs.txt  linting-base.in  linting-constrained.in  linting.in  linting.txt  pyproject-all-base.in  pyproject-all.in  pyproject-all.txt  pyproject-min-base.in  pyproject-min.in  pyproject-min.txt  pyproject.toml-constrained.in  pyproject.toml-extras-constrained.in  rebuild.sh  refresh.sh  testing-base.in  testing-constrained.in  testing-extra-constrained.in  testing-extra.in  testing-extra.txt  testing-mypy-constrained.in  testing-mypy.in  testing-mypy.txt  testing.in  testing.txt
src/: args_kwargs.rs  argument_markers.rs  build_context.rs  (+17 more)
(+3277 files in other folders)
