[package]
name = "pydantic-core"
version = "2.18.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/pydantic/pydantic-core"
repository = "https://github.com/pydantic/pydantic-core.git"
readme = "README.md"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/build.rs",
    "/generate_self_schema.py",
    "/rust-toolchain",
    "/src",
    "!/src/self_schema.py",
    "/python/pydantic_core",
    "/tests",
    "/.cargo",
    "!__pycache__",
    "!tests/.hypothesis",
    "!tests/.pytest_cache",
    "!*.so",
]
rust-version = "1.75"

[dependencies]
pyo3 = { version = "0.21.2", features = ["generate-import-lib", "num-bigint"] }
regex = "1.10.4"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.26.1"
serde_json = {version = "1.0.116", features = ["arbitrary_precision", "preserve_order"]}
enum_dispatch = "0.3.13"
serde = { version = "1.0.203", features = ["derive"] }
speedate = "0.14.0"
smallvec = "1.13.2"
ahash = "0.8.10"
url = "2.5.0"
# idna is already required by url, added here to be explicit
idna = "0.5.0"
base64 = "0.21.7"
num-bigint = "0.4.4"
python3-dll-a = "0.2.7"
uuid = "1.8.0"
jiter = { version = "0.4.1", features = ["python"] }

[lib]
name = "_pydantic_core"
crate-type = ["cdylib", "rlib"]

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

# This is separate to benchmarks because `bench` ends up building testing
# harnesses into code, as it's a special cargo profile.
[profile.profiling]
inherits = "release"
debug = true
strip = false

[dev-dependencies]
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }

[build-dependencies]
version_check = "0.9.4"
# used where logic has to be version/distribution specific, e.g. pypy
pyo3-build-config = { version = "0.21.0" }

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
manual_let_else = "allow"
match_bool = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
